[package]
name = "safe-tinyrust"
version = "0.1.0"
edition = "2021"

[dependencies]

# ESP HAL
esp-hal = { version = "0.18.0", features = ["esp32s3"] }

# Backtrace / panic handler
esp-backtrace = { version = "0.13.0", features = [
    "esp32s3",
    "panic-handler",
    "println"
] }

# Serial print
esp-println = { version = "0.11.0", features = ["jtag-serial"] }

# Heapless data structure
heapless = "0.8"

[profile.dev]
opt-level = "s"
debug = true

[profile.release]
opt-level = "s"
lto = true
debug = false
