[package]
name    = "safe-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal                = { version = "1.1.1", features = ["esp32s3", "unstable"] }
esp-backtrace          = { version = "0.18.1", features = ["esp32s3", "panic-handler", "println"] }
esp-println            = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1